# filecheck

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  strip-comments.sh
.github/workflows/: ci.yml  formatting-and-pyright.yml
filecheck/: __init__.py  __main__.py  colors.py  compiler.py  error.py  finput.py  help.py  logging.py  main.py  matcher.py  ops.py  options.py  parser.py  preprocess.py  regex.py
tests/: test_ranges.py
tests/filecheck/: check-next.test  check-not.test  comments.test  issue-37.test  labels-scoped.test  labels.test  lit.cfg  match-full-line.test  parsing.test  prefix.test  regex.test  simple.test  strict_whitespace.test  variable.test  variables.test  windows_line_endings.test
tests/filecheck/checks/: check-count.test  check-dag.test  check-empty-eof.test  check-empty.test  check-label.test  check-line.test  check-not-1.test  check-not-empty.test  literal.test
tests/filecheck/checks/check-not/: check-dag-2.test  check-not-3.test
tests/filecheck/checks/negative-tests/: check-dag-1.test  check-empty-fails.test  check-not-1.test  check-not-2.test  check-not-3.test
tests/filecheck/diagnostics/: allow-empty.test  label-error.test  regex-1.test  reject-empty-vars.test  substitution-1.test  substitution-2.test
tests/filecheck/flags/: check-prefix.test  check-prefixes.test  dump-input.test  enable-var-scope.test  match-full-lines2.test  mlir_regex_cls.test  strict-whitespace.test  two-vars.test  variables.test
tests/tools/: exfail  strip-comments.sh
