[tool.poetry]
name = "filecheck-ng"
version = "0.1.0"
description = "A Python-native clone of LLVMs FileCheck tool"
authors = ["Anton Lydike <me@antonlydike.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/AntonLydike/filecheck"
repository = "https://github.com/AntonLydike/filecheck"
keywords = ["tests", "filecheck", "llvm"]
packages = [
    { include = "filecheck" },
    { include = "filecheck/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
lit = "^18.1.8"
pre-commit = "^3.7.1"
pyright = "^1.1.370"

[tool.poetry.scripts]
filecheck = "filecheck.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
"include" = ["filecheck"]
